# highly-oscillatory

./: .coverage  .gitignore  .ruff.toml  BHIP.mpl  Levin_Bernstein_maple.mpl  Moment_free_Filon.mpl  README.md  app.py  asympt_no_stat_proc.mpl  asympt_stat_point_proc.mpl  coverage.xml  filon_no_stat_proc.mpl  filon_stat_point_proc.mpl  hybrid_method.mpl  moment_free_verify.mpl  pyproject.toml  pytest-coverage.txt  pytest.xml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: run-tests.yml  update-coverage-on-readme.yml
Levin_Python/: Hermite_Levin.py  Levin_Bernstein.py  Levin_Finitediff.py  genbarywts.py  jeet_mod_methods.py  test_file.py
levinpy/: Hermite_Levin.py  Levin_Bernstein.py  Levin_Finitediff.py  genbarywts.py  helper_methods.py  test_file.py
maple/: Levin_Hermite_Maple.mpl  moment_free_asympt_proc.mpl
src/levin/: bernstein.py  finite_diff.py  hermite.py
src/levin/common/: genbarywts.py  utils.py
src/levinpy/: Hermite_Levin.py  Levin_Bernstein.py  Levin_Finitediff.py  genbarywts.py  helper_methods.py  test_file.py
tests/: test_bernstein.py  test_hermite.py  test_utils.py
